# rust-benchmarks

./: .gitignore
.devcontainer/: Dockerfile  bashrc  devcontainer.json
chunking/: Cargo.toml  Makefile
chunking/benches/: chunking.rs  crypto.rs
encryption/: Cargo.toml
encryption/benches/: crypto.rs
hashing/: Cargo.toml  README.md
hashing/benches/: crypto.rs
