[package]
name = "rust_chunking_benchmarks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fastcdc = "3"


[dev-dependencies]
criterion = "0.4"
rand = "0.8"

[[bench]]
name = "chunking"
harness = false


[profile.bench]
opt-level = 3
codegen-units = 1
debug = false
debug-assertions = false
lto = true
rpath = false
#panic = "abort" This is ignored for bench profile
incremental = false
